# satsignal-otel

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: anchor.yml  ci.yml  publish.yml
examples/: example_otel_eval_run.py
src/satsignal_otel/: __init__.py  _anchor.py  canonical.py  helpers.py  processor.py
tests/: test_canonical.py  test_folder_alias.py  test_processor.py
